Update increment-version.yml with env for PAT

--- a/.github/workflows/increment-version.yml
+++ b/.github/workflows/increment-version.yml
@@ -23,3 +23,5 @@ jobs:
 
       - name: Increment version
         run: python increment_version.py
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT }}
